--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "jodit-react": "^4.1.2",
     "lucide-react": "^0.453.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
