--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,8 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
+    "skipLibCheck": true,
+    "noEmitOnError": false,
     "paths": {
       "@/*": ["./src/*"]
     }
