--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,12 +39,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.28.0",
     "jodit-react": "^4.1.2",
     "lucide-react": "^0.453.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.3.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-input-mask": "^2.0.4",
