--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -36,15 +36,16 @@
     "@tanstack/react-query-devtools": "^5.25.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
+    "chrono-node": "^2.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^2.28.0",
+    "date-fns": "^4.1.0",
     "jodit-react": "^4.1.2",
     "lucide-react": "^0.453.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
-    "react-day-picker": "^9.3.2",
+    "react-day-picker": "^9.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-input-mask": "^2.0.4",
