--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@nextui-org/date-picker": "^2.3.7",
+    "@nextui-org/system": "^2.4.4",
+    "@nextui-org/theme": "^2.4.3",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -41,8 +44,9 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.15.0",
     "jodit-react": "^4.1.2",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.468.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-day-picker": "^9.4.0",
