--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/date-picker": "^2.3.7",
+    "@nextui-org/react": "^2.6.10",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
     "@radix-ui/react-accordion": "^1.2.0",
