--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
@@ -44,9 +44,9 @@
     "chrono-node": "^2.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.16.1",
+    "framer-motion": "^12.0.11",
     "jodit-react": "^4.1.2",
     "lucide-react": "^0.474.0",
     "path": "^0.12.7",
