--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@heroui/react": "^2.6.14",
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/date-picker": "^2.3.9",
     "@nextui-org/react": "^2.6.11",
@@ -36,6 +37,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-pdf/renderer": "^4.1.6",
+    "@react-stately/data": "^3.12.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-query-devtools": "^5.62.16",
