--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "devStart": "nodemon  index.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.5.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -17,10 +18,12 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.4",
+    "faker": "^6.6.6",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.9.3",
     "mongoose-sequence": "^6.0.1",
     "morgan": "~1.9.1",
