--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@heroui/dropdown": "^2.3.13",
     "@heroui/react": "^2.6.14",
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/date-picker": "^2.3.9",
@@ -20,13 +21,13 @@
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -50,7 +51,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.3",
     "jodit-react": "^4.1.2",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.475.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.1",
