--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@heroui/dropdown": "^2.3.13",
+    "@heroui/input": "^2.4.16",
     "@heroui/react": "^2.6.14",
+    "@heroui/system": "^2.4.12",
+    "@heroui/theme": "^2.4.12",
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/date-picker": "^2.3.9",
     "@nextui-org/react": "^2.6.11",
@@ -53,9 +56,9 @@
     "jodit-react": "^4.1.2",
     "lucide-react": "^0.475.0",
     "path": "^0.12.7",
-    "react": "^18.3.1",
+    "react": "19.0.0",
     "react-day-picker": "^9.5.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.14.1",
