--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
-    "@heroui/dropdown": "^2.3.13",
-    "@heroui/input": "^2.4.16",
-    "@heroui/react": "^2.6.14",
-    "@heroui/system": "^2.4.12",
-    "@heroui/theme": "^2.4.12",
+    "@heroui/dropdown": "2.3.13",
+    "@heroui/input": "2.4.16",
+    "@heroui/react": "2.6.14",
+    "@heroui/system": "2.4.12",
+    "@heroui/theme": "2.4.12",
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/date-picker": "^2.3.9",
     "@nextui-org/react": "^2.6.11",
